Add styling for password input errors

--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
     </div>
     <form>
       <h2>I will answer the call:</h2>
-      <div class="input-container" id="first">
+      <div class="input-container">
         <label for="first-name">FIRST NAME</label>
         <input type="text" id="first-name" name="first-name" />
       </div>
-      <div class="input-container" id="last">
+      <div class="input-container">
         <label for="last-name">LAST NAME</label>
         <input type="text" id="last-name" name="last-name" />
       </div>
-      <div class="input-container" id="mail">
+      <div class="input-container">
         <label for="email">EMAIL</label>
         <input type="email" id="email" name="email" />
       </div>
-      <div class="input-container" id="phone">
+      <div class="input-container">
         <label for="tel">PHONE NUMBER</label>
         <input type="tel" id="tel" name="tel" />
       </div>
-      <div class="input-container" id="pass">
+      <div class="input-container">
         <label for="pw">PASSWORD</label>
-        <input type="password" id="pw" name="pw" />
+        <input class="error" type="password" id="pw" name="pw" />
       </div>
-      <div class="input-container" id="confirm">
+      <div class="input-container">
         <label for="confirm-pw">CONFIRM PASSWORD</label>
-        <input type="password" id="confirm-pw" name="confirm-pw" />
+        <input class="error" type="password" id="confirm-pw" name="confirm-pw" />
       </div>
       <button>Create Account</button>
     </form>
